--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
 
         <!-- 基本情報 -->
-        <div class="section">
+        <div class="section" id="sectionBasic">
             <h2>基本情報 <span class="pill" style="background: var(--danger);">必須</span></h2>
             <div class="meta-grid">
                 <div class="field full"><label>工事名称</label><input type="text" name="constructionName"
