--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
             </div>
         </div>
 
-        <!-- 基本情報 -->
         <div class="section" id="sectionBasic">
             <h2>基本情報 <span class="pill" style="background: var(--danger);">必須</span></h2>
             <div class="meta-grid">
@@ -82,17 +81,18 @@
                     </div>
                 </div>
                 <div class="field"><label>確認者</label><input type="text" name="confirmator" placeholder="担当者名"></div>
-                <div class="field"><label>作業員</label>
-                    <div class="meta-grid" style="grid-template-columns: repeat(4, 1fr); gap: 10px;">
+                <div class="field">
+                    <label>作業員</label>
+                    <div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 6px;">
                         <input type="text" name="worker1" placeholder="作業者1">
                         <input type="text" name="worker2" placeholder="作業者2">
                         <input type="text" name="worker3" placeholder="作業者3">
                         <input type="text" name="worker4" placeholder="作業者4">
                     </div>
                 </div>
-                <div class="field"><label>立会</label><textarea name="witness" rows="1"
-                        placeholder="立会者（管理員様等）"></textarea></div>
-                <div class="field"><label>備考（全体）</label><textarea name="overallNote" rows="2"
+                <div class="field"><label>立会</label><textarea name="witness" rows="1" placeholder="立会者様"></textarea>
+                </div>
+                <div class="field"><label>備考（全体）</label><textarea name="overallNote" rows="1"
                         placeholder="特記事項等"></textarea></div>
             </div>
         </div>
