--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <div class="field"><label>確認者</label><input type="text" name="confirmator" placeholder="担当者名"></div>
                 <div class="field">
                     <label>作業員</label>
-                    <div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 6px;">
+                    <div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 6px; flex: 1;">
                         <input type="text" name="worker1" placeholder="作業者1">
                         <input type="text" name="worker2" placeholder="作業者2">
                         <input type="text" name="worker3" placeholder="作業者3">
