--- a/index.html
+++ b/index.html
@@ -135,18 +135,17 @@
                     <section class="form-container compact-form">
                         <div style="display: flex; gap: 15px; align-items: flex-end;">
                             <div style="flex: 1;">
-                                <input type="text" id="new-title" class="input-field" placeholder="件名..."
-                                    style="margin-bottom: 8px; padding: 8px;">
+                                <input type="text" id="new-title" class="input-field" placeholder="件名...">
                                 <div style="position: relative;">
-                                    <textarea id="new-content" class="input-field" placeholder="内容... @メンション"
-                                        style="min-height: 40px; padding: 8px;"></textarea>
+                                    <textarea id="new-content" class="input-field"
+                                        placeholder="内容... @メンション"></textarea>
                                     <div id="mention-list" class="mention-list"
                                         style="bottom: 100%; top: auto; display: none;"></div>
                                 </div>
                             </div>
-                            <button id="add-thread-btn" class="btn">
-                                <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke-width="2.5"
-                                    stroke-linecap="round" stroke-linejoin="round">
+                            <button id="add-thread-btn" class="btn btn-primary">
+                                <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="white"
+                                    stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
                                     <line x1="22" y1="2" x2="11" y2="13"></line>
                                     <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
                                 </svg>
