--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
             </div>
         </header>
 
-        <div class="main-wrapper" style="display: flex; min-height: calc(100vh - 50px); margin-top: 50px;">
+        <div class="main-wrapper"
+            style="display: flex; min-height: calc(100vh - 50px); margin-top: 50px; padding-left: 72px;">
             <aside id="teams-sidebar" class="teams-sidebar">
                 <!-- Teams icons here -->
                 <div class="team-icon active" title="All Threads" onclick="switchTeam(null)">
