--- a/index.html
+++ b/index.html
@@ -143,21 +143,12 @@
             <div class="floating-form-container">
                 <div class="container">
                     <section class="form-container compact-form">
-                        <div style="display: flex; gap: 15px; align-items: flex-end;">
-                            <div style="flex: 1;">
-                                <input type="text" id="new-title" class="input-field" placeholder="件名..."
-                                    style="margin-top: 10px !important;">
-                                <div style="position: relative; margin-top: 10px !important;">
-                                    <div id="new-content" contenteditable="true" class="input-field rich-editor"
-                                        placeholder="内容... @メンション" style="margin-top: 0 !important;"></div>
-                                    <div id="attachment-preview-area" class="attachment-preview-area"></div>
-                                    <div id="mention-list" class="mention-list"
-                                        style="bottom: 100%; top: auto; display: none;"></div>
-                                </div>
-                            </div>
-                            <div style="display: flex; flex-direction: column; gap: 8px;">
+                        <div style="display: flex; gap: 15px;">
+                            <div style="display: flex; flex-direction: column; gap: 12px; margin-top: 5px;">
+                                <!-- Icon Column -->
                                 <button id="attach-file-btn" class="btn btn-outline"
-                                    style="position: relative; padding: 6px 10px;" title="ファイルを添付">
+                                    style="position: relative; padding: 6px 10px; height: 38px; width: 38px; display: flex; align-items: center; justify-content: center;"
+                                    title="ファイルを添付">
                                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                         stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                         <path
@@ -166,13 +157,26 @@
                                     </svg>
                                     <input type="file" id="file-input" style="display: none;" multiple>
                                 </button>
-                                <button id="add-thread-btn" class="btn btn-primary" style="position: relative;">
-                                    <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="white"
+                                <button id="add-thread-btn" class="btn btn-primary"
+                                    style="position: relative; height: 38px; width: 38px; display: flex; align-items: center; justify-content: center;">
+                                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="white"
                                         stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
                                         <line x1="22" y1="2" x2="11" y2="13"></line>
                                         <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
                                     </svg>
                                 </button>
+                            </div>
+                            <div style="flex: 1;">
+                                <input type="text" id="new-title" class="input-field" placeholder="件名..."
+                                    style="margin-top: 0 !important; margin-bottom: 10px;">
+                                <div style="position: relative;">
+                                    <div id="new-content" contenteditable="true" class="input-field rich-editor"
+                                        placeholder="内容... @メンション" style="margin-top: 0 !important; min-height: 38px;">
+                                    </div>
+                                    <div id="attachment-preview-area" class="attachment-preview-area"></div>
+                                    <div id="mention-list" class="mention-list"
+                                        style="bottom: 100%; top: auto; display: none;"></div>
+                                </div>
                             </div>
                         </div>
                     </section>
